[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11>=2.11.0", "setuptools"]
build-backend = "scikit-build-core.build"

[project]
name = "lightningclean"
version = "1.2.1"
description = "Blazing fast hardware-accelerated tabular firewall and regulated sanitization engine."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "AI Research Lab" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "numpy>=1.22.0",
    "pyarrow>=8.0.0"
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0"
]

[tool.scikit-build]
wheel.expand-args = true
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
wheel.packages = ["lightningclean"]
