[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "lightningclean"
version = "1.3.2"
description = "A publication-grade high-performance NUMA-aware crash-proof data processing micro-library."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "sanaullah7964", email = "sanaullah786shah92@gmail.com"}
]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://pypi.org/lightningclean"
Repository = "https://github.com/sanaullah-ai/lightningclean"
